@startuml
package "Управління користувачами" {
    class User {
        +id : INT
        +login : VARCHAR(50)
        +email : VARCHAR(100)
        +password : VARCHAR(255)
        +role : ENUM('admin', 'user')
    }

    class UserInfo {
        +id : INT
        +user_id : INT
        +first_name : VARCHAR(50)
        +last_name : VARCHAR(50)
        +phone_number : VARCHAR(15)
        +created_at : DATETIME
        +last_login : DATETIME
    }

    User --> UserInfo : "1 to 1"
}

package "Управління теплицями" {
    class Greenhouse {
        +id : INT
        +user_id : INT
        +name : VARCHAR(100)
        +latitude : DECIMAL(9, 6)
        +longitude : DECIMAL(9, 6)
        +created_at : DATETIME
    }

    class Sensor {
        +id : INT
        +greenhouse_id : INT
        +type : ENUM('temperature', 'humidity', 'light')
        +name : VARCHAR(50)
        +is_active : BOOLEAN
        +installed_at : DATETIME
    }

    class ControllerDevice {
        +id : INT
        +greenhouse_id : INT
        +type : ENUM('irrigation', 'lighting', 'ventilation')
        +name : VARCHAR(50)
        +is_active : BOOLEAN
        +installed_at : DATETIME
    }

    Greenhouse --> Sensor : "1 to many"
    Greenhouse --> ControllerDevice : "1 to many"
}

package "Автоматизація" {
    class AutomationRule {
        +id : INT
        +greenhouse_id : INT
        +name : VARCHAR(100)
        +type : ENUM('sensor', 'time')
    }

    class AutomationRuleDetail {
        +id : INT
        +rule_id : INT
        +min_value : DECIMAL(10, 2) [Nullable]
        +max_value : DECIMAL(10, 2) [Nullable]
        +start_time : TIME [Nullable]
        +interval : INTERVAL [Nullable]
    }

    class AutomationAction {
        +id : INT
        +rule_id : INT
        +controller_id : INT
        +name : VARCHAR(100)
    }

    AutomationRule --> AutomationRuleDetail : "1 to 1"
    AutomationRule --> AutomationAction : "1 to many"
    AutomationAction --> ControllerDevice : "1 to 1"
}

package "Спостереження" {
    class SensorState {
        +id : INT
        +sensor_id : INT
        +timestamp : DATETIME(3)
        +value : DECIMAL(10, 2)
        +unit : VARCHAR(20)
    }

    class Notification {
        +id : INT
        +user_id : INT
        +greenhouse_id : INT [Nullable]
        +message : TEXT
        +timestamp : DATETIME(3)
        +is_read : BOOLEAN
        +urgency : ENUM('info', 'warning', 'critical')
    }

    Sensor --> SensorState : "1 to many"
    User --> Notification : "1 to many"
    Greenhouse --> Notification : "0 to many"
}
@enduml
